xcalc.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 12

#include <stdio.h>
#include <stdlib.h>
#include <stdarg.h>
#include <limits.h>

#define YYSTYPE long long
#define YYSTYPE_BITS (sizeof(YYSTYPE) * CHAR_BIT)
#define YY_INPUT(buf, result, max_size)			\
	{						\
	result = !*instr ? 0 : (*(buf) = *instr++, 1);		\
	}

static const char *instr;
static YYSTYPE result;
static int error_flag;

static YYSTYPE ipow(YYSTYPE g, YYSTYPE k)
{
        YYSTYPE r0, r1;
        unsigned j = sizeof(k) * CHAR_BIT;
        r0 = 1;
        r1 = g;
        while (j--) {
                if ((k >> j) & 1) {
                        r0 = r0 * r1;
                        r1 = r1 * r1;
                } else {
                        r1 = r0 * r1;
                        r0 = r0 * r0;
                }
        }
        return r0;
}


#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_NUM(); /* 12 */
YY_RULE(int) yy_factor(); /* 11 */
YY_RULE(int) yy_term5(); /* 10 */
YY_RULE(int) yy_term4(); /* 9 */
YY_RULE(int) yy_term3(); /* 8 */
YY_RULE(int) yy_term2(); /* 7 */
YY_RULE(int) yy_term1(); /* 6 */
YY_RULE(int) yy_term0(); /* 5 */
YY_RULE(int) yy_EOF(); /* 4 */
YY_RULE(int) yy_expr(); /* 3 */
YY_RULE(int) yy_WS(); /* 2 */
YY_RULE(int) yy_stmt(); /* 1 */

YY_ACTION(void) yy_4_NUM(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_4_NUM\n"));
   yy = atoll(yytext); ;
}
YY_ACTION(void) yy_3_NUM(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_NUM\n"));
   yy = strtoll(yytext, 0, 8); ;
}
YY_ACTION(void) yy_2_NUM(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_NUM\n"));
   yy = strtoll(yytext, 0, 2); ;
}
YY_ACTION(void) yy_1_NUM(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_NUM\n"));
   yy = strtoll(yytext, 0, 16); ;
}
YY_ACTION(void) yy_1_factor(char *yytext, int yyleng)
{
#define i yyval[-1]
  yyprintf((stderr, "do yy_1_factor\n"));
   yy = i; ;
#undef i
}
YY_ACTION(void) yy_2_term5(char *yytext, int yyleng)
{
#define l yyval[-1]
  yyprintf((stderr, "do yy_2_term5\n"));
   yy = ~l; ;
#undef l
}
YY_ACTION(void) yy_1_term5(char *yytext, int yyleng)
{
#define l yyval[-1]
  yyprintf((stderr, "do yy_1_term5\n"));
   yy = l; ;
#undef l
}
YY_ACTION(void) yy_2_term4(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_term4\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_term4(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_term4\n"));
   l = ipow(l, r); ;
#undef r
#undef l
}
YY_ACTION(void) yy_4_term3(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_4_term3\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_3_term3(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_3_term3\n"));
   if (r) l /= r; else error_flag = 1; ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_term3(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_term3\n"));
   if (r) l /= r; else error_flag = 1; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_term3(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_term3\n"));
   l *= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_3_term2(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_3_term2\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_term2(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_term2\n"));
   l -= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_term2(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_term2\n"));
   l += r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_5_term1(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_5_term1\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_4_term1(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_4_term1\n"));
   l = (l << r) | (l >> (YYSTYPE_BITS - r)); ;
#undef r
#undef l
}
YY_ACTION(void) yy_3_term1(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_3_term1\n"));
   l = (l >> r) | (l << (YYSTYPE_BITS - r)); ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_term1(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_term1\n"));
   l >>= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_term1(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_term1\n"));
   l <<= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_7_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_7_term0\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_6_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_6_term0\n"));
   l = l != r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_5_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_5_term0\n"));
   l = l == r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_4_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_4_term0\n"));
   l = l <= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_3_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_3_term0\n"));
   l = l >= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_term0\n"));
   l = l > r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_term0(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_term0\n"));
   l = l < r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_4_expr(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_4_expr\n"));
   yy = l; ;
#undef r
#undef l
}
YY_ACTION(void) yy_3_expr(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_3_expr\n"));
   l ^= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_expr(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_2_expr\n"));
   l |= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_1_expr(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
  yyprintf((stderr, "do yy_1_expr\n"));
   l &= r; ;
#undef r
#undef l
}
YY_ACTION(void) yy_2_stmt(char *yytext, int yyleng)
{
#define i yyval[-1]
  yyprintf((stderr, "do yy_2_stmt\n"));
   error_flag = 1; ;
#undef i
}
YY_ACTION(void) yy_1_stmt(char *yytext, int yyleng)
{
#define i yyval[-1]
  yyprintf((stderr, "do yy_1_stmt\n"));
   result = i; ;
#undef i
}

YY_RULE(int) yy_NUM()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "NUM"));
  {  int yypos2= yypos, yythunkpos2= yythunkpos;  if (!yymatchString("0x")) goto l3;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l3;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;
  l4:;	
  {  int yypos5= yypos, yythunkpos5= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l5;  goto l4;
  l5:;	  yypos= yypos5; yythunkpos= yythunkpos5;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l3;  if (!yy_WS()) goto l3;  yyDo(yy_1_NUM, yybegin, yyend);  goto l2;
  l3:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchString("0b")) goto l6;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l6;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l6;
  l7:;	
  {  int yypos8= yypos, yythunkpos8= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l8;  goto l7;
  l8:;	  yypos= yypos8; yythunkpos= yythunkpos8;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l6;  if (!yy_WS()) goto l6;  yyDo(yy_2_NUM, yybegin, yyend);  goto l2;
  l6:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('0')) goto l9;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l9;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l9;
  l10:;	
  {  int yypos11= yypos, yythunkpos11= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\176\000\000\000\176\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l11;  goto l10;
  l11:;	  yypos= yypos11; yythunkpos= yythunkpos11;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l9;  if (!yy_WS()) goto l9;  yyDo(yy_3_NUM, yybegin, yyend);  goto l2;
  l9:;	  yypos= yypos2; yythunkpos= yythunkpos2;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l1;
  {  int yypos12= yypos, yythunkpos12= yythunkpos;
  {  int yypos14= yypos, yythunkpos14= yythunkpos;  if (!yymatchChar('+')) goto l15;  goto l14;
  l15:;	  yypos= yypos14; yythunkpos= yythunkpos14;  if (!yymatchChar('-')) goto l12;
  }
  l14:;	  goto l13;
  l12:;	  yypos= yypos12; yythunkpos= yythunkpos12;
  }
  l13:;	  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  l16:;	
  {  int yypos17= yypos, yythunkpos17= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l17;  goto l16;
  l17:;	  yypos= yypos17; yythunkpos= yythunkpos17;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l1;  if (!yy_WS()) goto l1;  yyDo(yy_4_NUM, yybegin, yyend);
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "NUM", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "NUM", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_factor()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "factor"));
  {  int yypos19= yypos, yythunkpos19= yythunkpos;  if (!yy_NUM()) goto l20;  yyDo(yySet, -1, 0);  goto l19;
  l20:;	  yypos= yypos19; yythunkpos= yythunkpos19;  if (!yymatchChar('(')) goto l18;  if (!yy_WS()) goto l18;  if (!yy_expr()) goto l18;  yyDo(yySet, -1, 0);  if (!yymatchChar(')')) goto l18;  if (!yy_WS()) goto l18;
  }
  l19:;	  yyDo(yy_1_factor, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "factor", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l18:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "factor", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term5()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "term5"));
  {  int yypos22= yypos, yythunkpos22= yythunkpos;  if (!yy_factor()) goto l23;  yyDo(yySet, -1, 0);  yyDo(yy_1_term5, yybegin, yyend);  goto l22;
  l23:;	  yypos= yypos22; yythunkpos= yythunkpos22;  if (!yymatchChar('~')) goto l21;  if (!yy_WS()) goto l21;  if (!yy_factor()) goto l21;  yyDo(yySet, -1, 0);  yyDo(yy_2_term5, yybegin, yyend);
  }
  l22:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "term5", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l21:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "term5", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term4()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "term4"));  if (!yy_term5()) goto l24;  yyDo(yySet, -2, 0);
  l25:;	
  {  int yypos26= yypos, yythunkpos26= yythunkpos;  if (!yymatchString("**")) goto l26;  if (!yy_WS()) goto l26;  if (!yy_term5()) goto l26;  yyDo(yySet, -1, 0);  yyDo(yy_1_term4, yybegin, yyend);  goto l25;
  l26:;	  yypos= yypos26; yythunkpos= yythunkpos26;
  }  yyDo(yy_2_term4, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "term4", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l24:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "term4", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term3()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "term3"));  if (!yy_term4()) goto l27;  yyDo(yySet, -2, 0);
  l28:;	
  {  int yypos29= yypos, yythunkpos29= yythunkpos;
  {  int yypos30= yypos, yythunkpos30= yythunkpos;  if (!yymatchChar('*')) goto l31;  if (!yy_WS()) goto l31;  if (!yy_term4()) goto l31;  yyDo(yySet, -1, 0);  yyDo(yy_1_term3, yybegin, yyend);  goto l30;
  l31:;	  yypos= yypos30; yythunkpos= yythunkpos30;  if (!yymatchChar('/')) goto l32;  if (!yy_WS()) goto l32;  if (!yy_term4()) goto l32;  yyDo(yySet, -1, 0);  yyDo(yy_2_term3, yybegin, yyend);  goto l30;
  l32:;	  yypos= yypos30; yythunkpos= yythunkpos30;  if (!yymatchChar('%')) goto l29;  if (!yy_WS()) goto l29;  if (!yy_term4()) goto l29;  yyDo(yySet, -1, 0);  yyDo(yy_3_term3, yybegin, yyend);
  }
  l30:;	  goto l28;
  l29:;	  yypos= yypos29; yythunkpos= yythunkpos29;
  }  yyDo(yy_4_term3, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "term3", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l27:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "term3", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term2()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "term2"));  if (!yy_term3()) goto l33;  yyDo(yySet, -2, 0);
  l34:;	
  {  int yypos35= yypos, yythunkpos35= yythunkpos;
  {  int yypos36= yypos, yythunkpos36= yythunkpos;  if (!yymatchChar('+')) goto l37;  if (!yy_WS()) goto l37;  if (!yy_term3()) goto l37;  yyDo(yySet, -1, 0);  yyDo(yy_1_term2, yybegin, yyend);  goto l36;
  l37:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('-')) goto l35;  if (!yy_WS()) goto l35;  if (!yy_term3()) goto l35;  yyDo(yySet, -1, 0);  yyDo(yy_2_term2, yybegin, yyend);
  }
  l36:;	  goto l34;
  l35:;	  yypos= yypos35; yythunkpos= yythunkpos35;
  }  yyDo(yy_3_term2, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "term2", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l33:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "term2", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term1()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "term1"));  if (!yy_term2()) goto l38;  yyDo(yySet, -2, 0);
  l39:;	
  {  int yypos40= yypos, yythunkpos40= yythunkpos;
  {  int yypos41= yypos, yythunkpos41= yythunkpos;  if (!yymatchString("<<")) goto l42;  if (!yy_WS()) goto l42;  if (!yy_term2()) goto l42;  yyDo(yySet, -1, 0);  yyDo(yy_1_term1, yybegin, yyend);  goto l41;
  l42:;	  yypos= yypos41; yythunkpos= yythunkpos41;  if (!yymatchString(">>")) goto l43;  if (!yy_WS()) goto l43;  if (!yy_term2()) goto l43;  yyDo(yySet, -1, 0);  yyDo(yy_2_term1, yybegin, yyend);  goto l41;
  l43:;	  yypos= yypos41; yythunkpos= yythunkpos41;  if (!yymatchString(">>>")) goto l44;  if (!yy_WS()) goto l44;  if (!yy_term2()) goto l44;  yyDo(yySet, -1, 0);  yyDo(yy_3_term1, yybegin, yyend);  goto l41;
  l44:;	  yypos= yypos41; yythunkpos= yythunkpos41;  if (!yymatchString("<<<")) goto l40;  if (!yy_WS()) goto l40;  if (!yy_term2()) goto l40;  yyDo(yySet, -1, 0);  yyDo(yy_4_term1, yybegin, yyend);
  }
  l41:;	  goto l39;
  l40:;	  yypos= yypos40; yythunkpos= yythunkpos40;
  }  yyDo(yy_5_term1, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "term1", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l38:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "term1", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_term0()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "term0"));  if (!yy_term1()) goto l45;  yyDo(yySet, -2, 0);
  l46:;	
  {  int yypos47= yypos, yythunkpos47= yythunkpos;
  {  int yypos48= yypos, yythunkpos48= yythunkpos;  if (!yymatchChar('<')) goto l49;  if (!yy_WS()) goto l49;  if (!yy_term1()) goto l49;  yyDo(yySet, -1, 0);  yyDo(yy_1_term0, yybegin, yyend);  goto l48;
  l49:;	  yypos= yypos48; yythunkpos= yythunkpos48;  if (!yymatchChar('>')) goto l50;  if (!yy_WS()) goto l50;  if (!yy_term1()) goto l50;  yyDo(yySet, -1, 0);  yyDo(yy_2_term0, yybegin, yyend);  goto l48;
  l50:;	  yypos= yypos48; yythunkpos= yythunkpos48;  if (!yymatchString(">=")) goto l51;  if (!yy_WS()) goto l51;  if (!yy_term1()) goto l51;  yyDo(yySet, -1, 0);  yyDo(yy_3_term0, yybegin, yyend);  goto l48;
  l51:;	  yypos= yypos48; yythunkpos= yythunkpos48;  if (!yymatchString("<=")) goto l52;  if (!yy_WS()) goto l52;  if (!yy_term1()) goto l52;  yyDo(yySet, -1, 0);  yyDo(yy_4_term0, yybegin, yyend);  goto l48;
  l52:;	  yypos= yypos48; yythunkpos= yythunkpos48;  if (!yymatchString("==")) goto l53;  if (!yy_WS()) goto l53;  if (!yy_term1()) goto l53;  yyDo(yySet, -1, 0);  yyDo(yy_5_term0, yybegin, yyend);  goto l48;
  l53:;	  yypos= yypos48; yythunkpos= yythunkpos48;  if (!yymatchString("!=")) goto l47;  if (!yy_WS()) goto l47;  if (!yy_term1()) goto l47;  yyDo(yySet, -1, 0);  yyDo(yy_6_term0, yybegin, yyend);
  }
  l48:;	  goto l46;
